# Vending-machine

./: .pre-commit-config.yaml  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: main.yml
Vending/: .coverage  app.py  app_init.py  app_legacy.py  coverage.xml  manager.py  test.py
Vending/API/: machine_route.py  product_route.py
Vending/api/: machine_route.py  product_route.py
Vending/database/: machine.py  product.py
Vending/instance/: test.sqlite  test1.sqlite  test5.sqlite
Vending/testing/: conftest.py  test_machine.py
instance/: test5.sqlite  test6.sqlite  test8.sqlite  test9.sqlite  test91.sqlite  test911.sqlite
vending/: .coverage  app.py  coverage.xml  manager.py
vending/api/: machine_route.py  product_route.py
vending/database/: machine.py  product.py
vending/instance/: test1.sqlite  test2.sqlite
vending/testing/: conftest.py  test_machine.py  test_product.py
vending/testing/instance/: test1.sqlite
