[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = ""
authors = ["u6280154 <91524277+u6280154@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
